@@ -32,6 +32,8 @@ class Application extends \FreeFW\Core\Application
         \Psr\Log\LoggerInterface $p_logger
     ) {
         parent::__construct($p_config, $p_logger);
+        \FreeFW\DI\DI::setShared('config', $p_config);
+        \FreeFW\DI\DI::setShared('logger', $p_logger);
     }
 
     /**
